# terminal-donut-cli

./: README.md  donut.py  index.html  pyproject.toml
