[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-donut-cli"
version = "0.1.0"
description = "Animated ASCII donut in your terminal"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Inky" }]

[project.scripts]
donut = "donut:main"
